tests/golden/err-at-dot-abolished/expected_error.txt
error: `@.` は廃止されました
 --> ./_.clum:1:2
  |
1 | @.
  |  ^ 兄弟ファイルは `@./ファイル名` で、出どころを明示して import します
